k8s/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: teamy-backend
  labels:
    app: teamy-backend
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: teamy-backend
  template:
    metadata:
      labels:
        app: teamy-backend
    spec:
      containers:
        - name: teamy-backend
          image: registry.digitalocean.com/teamyapp/teamy-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: teamy-backend
spec:
  selector:
    app: teamy-backend
  ports:
    - name: web-services
      port: 9000
    - name: rpc-services
      port: 9001
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: production
  name: teamy-backend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`web-backend.teamyapp.com`)
      services:
        - kind: Service
          name: teamy-backend
          namespace: production
          port: 9000
          passHostHeader: true
    - kind: Rule
      match: Host(`rpc-backend.teamyapp.com`)
      services:
        - kind: Service
          name: teamy-backend
          namespace: production
          port: 9001
          passHostHeader: true
          scheme: h2c
  tls:
    secretName: certs-teamyapp.com
