k8s/testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: testing
  name: teamy-backend
  labels:
    app: teamy-backend
  annotations:
    # force policy will ensure that deployment is updated
    # even when tag is unchanged (latest remains)
    keel.sh/policy: force
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: teamy-backend
  template:
    metadata:
      labels:
        app: teamy-backend
    spec:
      containers:
        - name: teamy-backend
          image: registry.digitalocean.com/teamyapp/teamy-backend-testing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  namespace: testing
  name: teamy-backend
spec:
  selector:
    app: teamy-backend
  ports:
    - name: gql
      port: 9001
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: testing
  name: teamy-backend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backend.testing.teamyapp.com`)
      services:
        - kind: Service
          name: teamy-backend
          namespace: testing
          port: 9001
          passHostHeader: true
    - kind: Rule
      match: Host(`backend-v2.testing.teamyapp.com`)
      services:
        - kind: Service
          name: teamy-backend
          namespace: testing
          port: 9001
          passHostHeader: true
  tls:
    secretName: teamy-cert
